--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -3,6 +3,7 @@
     {{!-- Sheet Header --}}
     <header class="sheet-header">
       <div class="header-fields">
+        {{#GM}}<button style="width:150px;" data-activeCheck>{{#if system.activePartymember}}Active Party Member{{else}}Inactive Party Member{{/if}}</button>{{/GM}}
         <table>
           <tr>
             <td>
