--- a/css/sheet-status.css
+++ b/css/sheet-status.css
@@ -1,6 +1,14 @@
 .tab.status button {
-  padding: 0;
+  padding: 10px;
   margin: 0;
   background-color: transparent;
   line-height: initial;
+  font-size:9pt;
+}
+.sheet .status .no-background{
+    background:none;
+    font-size:12pt;
+}
+.sheet .status .skillvalue{
+    font-size:10pt;
 }
