--- a/templates/item/item-rangedWeapon-sheet.hbs
+++ b/templates/item/item-rangedWeapon-sheet.hbs
@@ -26,8 +26,7 @@
                                           type="number"
                                           name="system.quantity"
                                           value="{{ system.quantity }}" />
-                <br />Keep Expanded:
-                <input type="checkbox" name="system.itemOpen" {{checked system.itemOpen}} />
+               
             </td>
           <td>
             <button
@@ -48,7 +47,7 @@
           </td>
         </tr>
       </table>
-      <table class="equipped-stats">
+      <table class="equipped-stats" style="display: none;">
         <td>Ability</td>
         <td>
           <input
