--- a/templates/actor/items/equipped-ranged-weapons.hbs
+++ b/templates/actor/items/equipped-ranged-weapons.hbs
@@ -1,193 +1,157 @@
 {{#each rangedWeapons as |item id|}}
 {{#if item.system.itemEquipped}}
-<div class="item flexrow weapons-div" data-item-id="{{ item._id }}">
-  <table class="item-box weapons-table left">
-    <tr>
-      <td>
-        <details {{#if item.system.itemOpen }} open="true" {{/if}}>
-          <summary data-expandtoggle data-itemid="{{ item._id }}">
-            <p class="allcaps" data-item-id="{{ item._id }}">
-              {{ item.name }}
-            </p>
-          </summary>
+    <table class="item-box weapons-table left">
+        <tr>
+            <td>
+                <details {{#if item.system.itemOpen }} open="true" {{/if}}>
+                    <summary data-expandtoggle data-itemid="{{ item._id }}">
+                        <p class="allcaps" data-item-id="{{ item._id }}">
+                            {{ item.name }}
+                        </p>
+                    </summary>
 
-          <table class="equipped-stats">
-            <tr>
-              <td colspan="999">DETAILS</td>
-            </tr>
-            <tr>
-              <td>AP</td>
-              <td>Load</td>
-              <td>Str</td>
-            </tr>
-            <tr>
-              <td>
-                <div>
-                  {{ item.system.apCost }}
-                </div>
-              </td>
-              <td>{{ item.system.load }}</td>
-              <td>{{ item.system.strengthRequirement }}</td>
-            </tr>
-          </table>
-          <table class="equipped-stats">
-            <tr>
-              <td colspan="999">RANGE</td>
-            </tr>
-            <tr>
-              {{#NPC ../actor.type}}
-              <td>0 - <input
-                  id="range-form"
-                  type="number"
-                  name="system.range.short"
-                  style="max-width:35px"
-                  value="{{ item.system.range.short }}"
-                />ft</td>
-              <td>{{ item.system.range.short }} ft - {{ system.range.long }}ft</td>
-              <td>
-                <input
-                  id="range-form"
-                  type="number"
-                  name="system.range.long"
-                  style="max-width:35px"
-                  value="{{ item.system.range.long }}"
-                />ft+ 
-              </td>
-              {{else}}
-                <td title="NORMAL">0 - {{ item.system.range.short }}ft</td>
-                <td title="DISADVANTAGED">{{#Sum item.system.range.short 1}}{{/Sum}} ft - {{ system.range.long }}ft</td>
-                <td title="NAT 20 ONLY">{{#Sum system.range.long 1}}{{/Sum}}ft+</td>
-              {{/NPC}}
-            </tr>
-          </table>
-          {{#GM}}
-          <table class="equipped-stats">
-            <tr>
-              <td>Ability</td>
-              <td>
-                <select style="width: 100%" data-set-ability data-weapon-id="{{ item._id }}">
-                  {{selectOptions ../system.abilities selected=item.system.abilityMod valueAttr="abbr" labelAttr="label" blank="None"}}
-                </select>
-              </td>
-            </tr>
-            <tr>
-              <td>Skill</td>
-              <td>
-                <select style="width: 100%" data-set-skill data-weapon-id="{{ item._id }}">
-                  {{selectOptions ../system.skills selected=item.system.skillBonus valueAttr="id" labelAttr="label" blank="None"}}
-                </select>
-              </td>
-            </tr>
-          </table>
-          {{/GM}}
-          <table class="equipped-stats">
-            <tr><td rowspan="3" style="background:black;"><img src="{{item.img}}" style="width:75px;height:auto;" /></td>
-                <td>{{ item.system.ammo.assigned }}</td>
-                <td>Owned</td>
-                <td rowspan="2" style="width:40px;background:#222;">
-                    <div title="Swap Your Current Ammo"
-                         class="fakebutton"
-                         style="padding:10px;"
-                         data-ammoswap
-                         data-weapon-id="{{ item._id }}">
-                        SWAP AMMO
-                    </div>
-                </td>
-                <td rowspan="2" style="background:#222;">
-                    {{#GreaterThan item.system.ammo.capacity.value 1}}
-                    <div class="fakebutton rollable resource-label"
-                         style="padding:20px;"
-                         data-weapon-roll
-                         data-weapon-id="{{ item._id }}">
-                        FIRE!
-                    </div>
-                    {{else}}
-                    <div class="fakebutton"
-                         style="padding:20px;">
-                        NO AMMO!
-                    </div>
-                    {{/GreaterThan}}
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    {{ item.system.ammo.capacity.value }} / {{ item.system.ammo.capacity.max }}
-                    <i title="Reloaded {{ system.reloadDecay }} Times | 10 Reloads = 1 Level of Decay"
-                         data-reload
-                         data-weapon-id="{{ item._id }}"
-                       class="fa fa-refresh"></i>
-                </td>
-              <td>
-                {{#each item.ammos as |ammo|}}
-                {{ ammo.system.quantity }}
-                {{/each}}
-              </td>
+                    <table class="equipped-stats">
+                        <tr>
+                            <td colspan="999">DETAILS</td>
+                        </tr>
+                        <tr>
+                            <td>AP</td>
+                            <td>Load</td>
+                            <td>Str</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div>
+                                    {{ item.system.apCost }}
+                                </div>
+                            </td>
+                            <td>{{ item.system.load }}</td>
+                            <td>{{ item.system.strengthRequirement }}</td>
+                        </tr>
+                    </table>
+                    <table class="equipped-stats">
+                        <tr>
+                            <td colspan="999">RANGE</td>
+                        </tr>
+                        <tr>
+                            {{#NPC ../actor.type}}
+                            <td>
+                                0 - <input id="range-form"
+                                           type="number"
+                                           name="system.range.short"
+                                           style="max-width:35px"
+                                           value="{{ item.system.range.short }}" />ft
+                            </td>
+                            <td>{{ item.system.range.short }} ft - {{ system.range.long }}ft</td>
+                            <td>
+                                <input id="range-form"
+                                       type="number"
+                                       name="system.range.long"
+                                       style="max-width:35px"
+                                       value="{{ item.system.range.long }}" />ft+
+                            </td>
+                            {{else}}
+                            <td title="NORMAL">0 - {{ item.system.range.short }}ft</td>
+                            <td title="DISADVANTAGED">{{#Sum item.system.range.short 1}}{{/Sum}} ft - {{ system.range.long }}ft</td>
+                            <td title="NAT 20 ONLY">{{#Sum system.range.long 1}}{{/Sum}}ft+</td>
+                            {{/NPC}}
+                        </tr>
+                    </table>
+                    {{#GM}}
+                    <table class="equipped-stats">
+                        <tr>
+                            <td>Ability</td>
+                            <td>
+                                <select style="width: 100%" data-set-ability data-weapon-id="{{ item._id }}">
+                                    {{selectOptions ../system.abilities selected=item.system.abilityMod valueAttr="abbr" labelAttr="label" blank="None"}}
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Skill</td>
+                            <td>
+                                <select style="width: 100%" data-set-skill data-weapon-id="{{ item._id }}">
+                                    {{selectOptions ../system.skills selected=item.system.skillBonus valueAttr="id" labelAttr="label" blank="None"}}
+                                </select>
+                            </td>
+                        </tr>
+                    </table>
+                    {{/GM}}
+                    <table class="equipped-stats">
+                        <tr>
+                            <td rowspan="3" style="background:black;"><img src="{{item.img}}" style="width:75px;height:auto;" /></td>
+                            <td>{{ item.system.ammo.assigned }}</td>
+                            <td>Owned</td>
+                            <td rowspan="2" style="width:40px;background:#222;">
+                                <div title="Swap Your Current Ammo"
+                                     class="fakebutton"
+                                     style="padding:10px;"
+                                     data-ammoswap
+                                     data-weapon-id="{{ item._id }}">
+                                    SWAP AMMO
+                                </div>
+                            </td>
+                            <td rowspan="2" style="background:#222;">
+                                {{#GreaterThan item.system.ammo.capacity.value 1}}
+                                <div class="fakebutton rollable resource-label"
+                                     style="padding:20px;"
+                                     data-weapon-roll
+                                     data-weapon-id="{{ item._id }}">
+                                    FIRE!
+                                </div>
+                                {{else}}
+                                <div class="fakebutton"
+                                     style="padding:20px;">
+                                    NO AMMO!
+                                </div>
+                                {{/GreaterThan}}
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                {{ item.system.ammo.capacity.value }} / {{ item.system.ammo.capacity.max }}
+                                <i title="Reloaded {{ system.reloadDecay }} Times | 10 Reloads = 1 Level of Decay"
+                                   data-reload
+                                   data-weapon-id="{{ item._id }}"
+                                   class="fa fa-refresh"></i>
+                            </td>
+                            <td>
+                                {{#each item.ammos as |ammo|}}
+                                {{ ammo.system.quantity }}
+                                {{/each}}
+                            </td>
 
-            </tr>
-            <tr style="vertical-align: middle">
-              <td style="width: 100px; border-right: none">
-                CND:
-                <input
-                  title="0 is Broken, 10 is Full Functionality"
-                  style="width: 50px"
-                  type="number"
-                  name="{{ item.system.decay }}"
-                  value="{{ item.system.decay }}"
-                  data-set-decay
-                  data-weapon-id="{{ item._id }}"
-                />
-              </td>
-              <td colspan="3" style="border-left: none">
-                <progress
-                  style="width: 100%; padding-right: 5px"
-                  class="statusbar stamina"
-                  value="{{ item.system.decay }}"
-                  max="10"
-                >
-                  {{ item.system.decay }}
-                </progress>
-              </td>
-            </tr>
-          </table>
+                        </tr>
+                        <tr style="vertical-align: middle">
+                            <td style="width: 100px; border-right: none">
+                                CND:
+                                <input title="0 is Broken, 10 is Full Functionality"
+                                       style="width: 50px"
+                                       type="number"
+                                       name="{{ item.system.decay }}"
+                                       value="{{ item.system.decay }}"
+                                       data-set-decay
+                                       data-weapon-id="{{ item._id }}" />
+                            </td>
+                            <td colspan="3" style="border-left: none">
+                                <progress style="width: 100%; padding-right: 5px"
+                                          class="statusbar stamina"
+                                          value="{{ item.system.decay }}"
+                                          max="10">
+                                    {{ item.system.decay }}
+                                </progress>
+                            </td>
+                        </tr>
+                    </table>
+                </details>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="999" class="context-menu" data-item-id="{{ item._id }}">
+                 <i class="fas fa-ellipsis context-icon"></i>
+            </td>
+        </tr>
+    </table>
 
-          <a
-            style="float: right; margin-right: 10px"
-            class="item-control item-delete"
-            title="{{localize 'DOCUMENT.Delete' type='item'}}"
-          >
-            <i class="fas fa-trash"></i>
-          </a>
-          <a
-            style="float: right; margin-right: 10px"
-            class="item-control"
-            data-edit
-            data-item-id="{{ item._id }}"
-            title="{{localize 'DOCUMENT.Update' type='item'}}"
-          >
-            <i class="fas fa-edit"></i>
-          </a>
-          <a
-            style="float: right; margin-right: 10px"
-            data-equip
-            data-item-id="{{ item._id }}"
-            class="item-control"
-            title="Unequip an item"
-          >
-            <i class="fas fa-tshirt"></i>
-          </a>
-          {{#DifferentFrom item.system.description ""}}
-            <a style="float: right; margin-right: 10px"
-            data-sendToChat
-            data-item-id="{{ item._id }}"
-            class="item-control"
-            title="Send description to Chat">
-                <i class="fa-solid fa-comment"></i>
-            </a>
-          {{/DifferentFrom}}
-        </details>
-      </td>
-    </tr>
-  </table>
-</div>
 {{/if}}
 {{/each}}
