--- a/templates/actor/status/passives.hbs
+++ b/templates/actor/status/passives.hbs
@@ -3,7 +3,7 @@
         <td title="Calculated: {{system.healingRate.value}} (End + Lvl)/2 &#013;Modifiers: {{system.healingRate.modifiers}} &#013;Manual Edits: {{system.healingRate.base}}">Healing Rate</td>
         <td class="resource-label rollable"
             title="
-            1d20 + Perception Mod ( {{system.abilities.per.mod}} ) {{#DifferentFrom system.combatSequence.base 0}} + Manual adjustments ({{system.combatSequence.base}}){{/DifferentFrom}} {{#DifferentFrom system.combatSequence.modifiers 0}} + Effects ( {{system.combatSequence.modifiers}} ){{/DifferentFrom}} - Penalties ( {{system.penaltyTotal}} ) + Half-luck ( {{#LckMod system.abilities.lck.mod 2}}{{/LckMod}} )"
+            d20 + Perception Mod ( {{system.abilities.per.mod}} ) {{#DifferentFrom system.combatSequence.base 0}} + Manual adjustments ({{system.combatSequence.base}}){{/DifferentFrom}} {{#DifferentFrom system.combatSequence.modifiers 0}} + Effects ( {{system.combatSequence.modifiers}} ){{/DifferentFrom}} - Penalties ( {{system.penaltyTotal}} ) + Half-luck ( {{#LckMod system.abilities.lck.mod 2}}{{/LckMod}} )"
             data-rollable
             data-advantage="{{system.combatSequence.advantage}}"
             data-roll="d20+@combatSequence.value+-@penaltyTotal+@luckmod"
@@ -13,8 +13,8 @@
         <td class="rollable"
             data-rollable
             data-roll="d20-{{ penaltyTotal }}"
-            data-label="Radiation DC Check: Roll over {{system.radiationDC.value}} to succeed"
-            title="D20 - PenaltyTotal({{penaltyTotal}}) against Radiation. Roll higher than {{system.radiationDC.value}} to succeed. On Fail gain level of Radiation">
+            data-label="Radiation DC Check: Roll {{system.radiationDC.value}} or higher to succeed"
+            title="D20 - PenaltyTotal({{penaltyTotal}}) against Radiation. Roll {{system.radiationDC.value}} or higher to succeed. On Fail gain level of Radiation">
             Rad DC
         </td>
         <td title="12 + Perception Mod ( {{system.abilities.per.mod}} ) {{#DifferentFrom system.passiveSense.base 0}} + Manual adjustments ({{system.passiveSense.base}}){{/DifferentFrom}} {{#DifferentFrom system.passiveSense.modifiers 0}} + Effects ( {{system.passiveSense.modifiers}} ){{/DifferentFrom}}">
@@ -30,7 +30,7 @@
                data-stat="healingRate"
                data-type=""
                class="fas fa-minus-square fakebutton nobackground"></i>
-            {{#Sum3 system.healingRate.base system.healingRate.modifiers system.healingRate.value}}{{/Sum3}}
+            {{system.healingRate.value}}
             <i style="padding: 3px"
                data-statAddition
                data-stat="healingRate"
@@ -51,7 +51,7 @@
                class="fas fa-plus-square fakebutton nobackground"></i>
         </td>
         <td style="vertical-align:middle;">
-            {{#Sum system.radiationDC.modifiers system.radiationDC.base}}{{/Sum}}
+            {{system.radiationDC.value}}
         </td>
         <td class="skill-value">
             <i style="padding: 3px"
