Updates for Perk Bonuses

--- a/templates/actor/dialog/attack.hbs
+++ b/templates/actor/dialog/attack.hbs
@@ -6,6 +6,10 @@
         <div>Skill Bonus:</div>
         <div>{{ skillBonus }}</div>
       </div>
+        <div class="flex space-between">
+        <div>Perks Bonus:</div>
+        <div>{{ attackBonus }}</div>
+      </div>
       <div class="flex space-between">
         <div>Ability Bonus:</div>
         <div>{{ abilityBonus }}</div>
