--- a/templates/actor/heading/image.hbs
+++ b/templates/actor/heading/image.hbs
@@ -24,7 +24,7 @@
   <tr>
       <td>
           {{#GM}}
-          <div class="fakebutton" data-pc-loot title="Player loots a room or container">
+          <div style="max-width:90%;margin:auto;" class="fakebutton" data-pc-loot title="Player loots a room or container">
               <i class="fa-regular">ROOM LOOT</i>
           </div>
           {{/GM}}
