--- a/templates/item/item-trait-sheet.hbs
+++ b/templates/item/item-trait-sheet.hbs
@@ -29,9 +29,10 @@
 
   {{!-- Sheet Tab Navigation --}}
   {{!-- Sheet Tab Navigation --}}
-  <nav class="sheet-tabs tabs" data-group="primary">
+<nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
-  </nav>
+    <a class="item" data-tab="effects">Effects</a>
+</nav>
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
