--- a/templates/actor/parts/npc-status.hbs
+++ b/templates/actor/parts/npc-status.hbs
@@ -54,15 +54,15 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="number" name="system.healingRate" value="{{ system.healingRate }}" />
+                        <input type="number" name="system.healingRate" value="{{ system.healingRate.value }}" />
                     </td>
                     <td>
-                        <input type="number" name="system.combatSequence" value="{{ system.combatSequence }}" />
+                        <input type="number" name="system.combatSequence" value="{{ system.combatSequence.value }}" />
                     </td>
                     <td>
                         <input type="number"
                                name="system.npcPassivesense"
-                               value="{{ system.npcPassivesense }}" />
+                               value="{{ system.passiveSense.value }}" />
                     </td>
                 </tr>
                 <tr>
