--- a/templates/actor/status/penalties.hbs
+++ b/templates/actor/status/penalties.hbs
@@ -78,7 +78,7 @@
             data-stat="exhaustion"
             data-type="penalties"
             class="fas fa-minus-square fakebutton nobackground"></i>
-            {{system.penalties.exhaustion.value}}
+            {{#Sum system.penalties.exhaustion.base system.penalties.exhaustion.modifiers}}{{/Sum}}
             <i style="padding: 3px"
             data-statAddition
             data-stat="exhaustion"
